@@ -1,1 +1,1 @@
-ar bg bn ca cs da de el en_GB eo es eu fi fr gl hu hr it kk ky nb nl pa pl pt pt_BR ru sl sr sv te uk ur vi wo zh_CN
+ar bg bn ca cs da de el en_GB eo es eu fi fr gl hu hr it kk ky nb nl pa pl pt_BR pt_PT ru sl sr sv te uk ur vi wo zh_CN
